--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -13,6 +13,7 @@
 }
 
 @import "_reset";
+@import "../../bower_components/font-awesome/css/font-awesome.min.css";
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700,600,300);
 @import url(https://fonts.googleapis.com/css?family=Merriweather:700);
 
@@ -21,6 +22,10 @@ $susy: (
   global-box-sizing: border-box,
   //use-custom: (rem: true)
 );
+
+body{
+  font-family: 'Open Sans', sans-serif;
+}
 
 .fixed-panel{
   position: fixed;
@@ -36,14 +41,19 @@ $susy: (
   display: flex;
   flex-direction: row;
   height: 100px;
-  font-family: 'Open Sans', sans-serif;
+
+
+}
+
+.top-logo{
+  flex-grow: 1;
+  align-self: center;
+  text-align: center;
+
 }
 
 .logo-header{
   text-decoration: none;
-  flex-grow: 1;
-  align-self: center;
-  text-align: center;
 }
 
 .logo-header__title{
@@ -53,11 +63,46 @@ $susy: (
 .logo-header__tagline{
   color: white;
 }
+
 .top-navigation{
   align-self: center;
+  margin-right: 30px;
 }
+
+.navigation-list{
+  @include clearfix;
+}
+
+.navigation-item{
+  margin-right: 40px;
+  border-top: 3px solid transparent;
+  border-bottom: 3px solid transparent;
+  padding: 35px 0px;
+
+  &:hover{
+    border-bottom-color: white;
+  }
+
+  &:last-child{
+    margin-right: 0;
+  }
+
+}
+
+.navigation-link{
+  text-decoration: none;
+  color: inherit;
+
+
+}
+
 .top-search{
   align-self: center;
+  margin-right: 35px;
+}
+
+.form-search{
+  position: relative;
 }
 
 .input{
@@ -72,6 +117,15 @@ $susy: (
   font-size: 12px;
   font-weight: 400;
   line-height: 75px;
+}
+
+.label{
+  position: absolute;
+  right: 13px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #b6b6b6;
+  font-size: 14px;
 }
 
 
@@ -90,6 +144,324 @@ $susy: (
 .header{
   background-image: url("../images/header-bg.jpg");
   background-size: cover;
-  height: 5000px;
+  height: 100vh;
+}
 
+.container{
+  @include container(1180px);
+}
+
+.header-intro{
+  padding-top: 200px;
+  @include span(9 of 20);
+  text-align: right;
+}
+
+.intro-title{
+  color: white;
+  font-size: 50px;
+  font-weight: 400;
+  line-height: 70px;
+  margin-bottom: 50px;
+}
+
+.intro-button{
+  background-color: #8824cd;
+  border-radius: 30px;
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 0 rgba(0, 0, 0, 0.2);
+  color: white;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 60px;
+  border: none;
+  padding: 0 60px;
+  margin-bottom: 20px;
+}
+
+.intro-description{
+  color: white;
+  font-family: inherit;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 17px;
+  width: 55%;
+  float: right;
+  text-align: center;
+}
+
+.section-1{
+  background-color: #2e3b4e;
+  padding-top: 80px;
+  padding-bottom: 140px;
+}
+
+.about{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 68%;
+  margin: 0 auto;
+}
+
+.article{
+  margin-bottom: 70px;
+  width: 40%;
+
+  &:last-child{
+    margin-right: 0;
+  }
+}
+
+.article-header{
+  color: white;
+  font-family: inherit;
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 26px;
+  text-transform: uppercase;
+  margin-bottom: 35px;
+}
+
+.article-text{
+  color: white;
+  font-family: inherit;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 26px;
+}
+
+.section-2{
+  background-color: #e7526b;
+  background-image: url("../images/section-bg.png");
+  background-size: cover;
+
+  padding: 150px 0 195px;
+}
+
+.action{
+  width: 50%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.action-header{
+  color: white;
+  font-family: inherit;
+  font-size: 35px;
+  font-weight: 300;
+  line-height: 60px;
+  margin-bottom: 20px;
+}
+
+.action-description{
+  color: white;
+  font-family: inherit;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 26px;
+  width: 80%;
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
+
+.action-button{
+  background-color: white;
+  border-radius: 31px;
+  color: #d54c63;
+  font-family: inherit;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 60px;
+  border: none;
+  padding: 0 90px;
+}
+
+.section-3{
+  background: white url("../images/photo1.jpg") no-repeat;
+  background-size: contain;
+  padding-bottom: 130px;
+  padding-top: 90px;
+}
+
+.s3-inner{
+  color: #3a4d60;
+  font-family: inherit;
+  width: 70%;
+  margin: 0 auto;
+  margin-right: 1%;
+}
+
+.s3-inner-header{
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 26px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+
+}
+
+.s3-inner-description{
+  font-size: 19px;
+  font-weight: 400;
+  line-height: 31px;
+  margin-bottom: 30px;
+}
+
+.s3inner-text{
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 26px;
+}
+
+.section-4{
+  background: url('../images/section-bg-2.jpg') no-repeat;
+  background-size: cover;
+  padding-top: 95px;
+
+  .container-fluid{
+    background-color: rgba(82,26,102,0.8);
+  }
+}
+
+
+
+.s4-inner{
+  padding-bottom: 115px;
+  padding-top: 95px;
+  text-align: center;
+  width: 70%;
+  margin: 0 auto;
+}
+
+.s4-inner-header{
+  color: white;
+  font-family: inherit;
+  font-size: 40px;
+  font-weight: 300;
+  line-height: 48px;
+  margin-bottom: 30px;
+}
+
+.s4-inner-text{
+  color: #a87bb7;
+  font-family: inherit;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 33px;
+  margin-bottom: 30px;
+}
+
+.s4-inner-button{
+  background-color: #8824cd;
+  border-radius: 29px;
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 0 rgba(0, 0, 0, 0.2);
+  color: white;
+  font-family: inherit;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 60px;
+  margin-bottom: 20px;
+  border: none;
+  padding: 0 60px;
+}
+
+.s4-inner-substring{
+  color: white;
+  font-family: inherit;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 17px;
+}
+
+.section-5{
+  background: url("../images/photo2.jpg");
+  background-size: cover;
+}
+
+.s5-inner{
+  width: 50%;
+  margin-right: auto;
+  margin-left: 0;
+  padding-top: 360px;
+  padding-bottom: 90px;
+}
+
+.s5-inner-prof{
+  color: white;
+  font-family: inherit;
+  font-size: 13px;
+  font-weight: 600;
+  border: 2px solid white;
+  border-radius: 17px;
+  padding: 5px 30px;
+  margin-bottom: 30px;
+  display: inline-block;
+}
+
+.s5-inner-header{
+  color: white;
+  font-family: inherit;
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 50px;
+  margin-bottom: 25px;
+}
+
+.s5-inner-signature{
+  display: table;
+}
+
+.s5-inner-avatar{
+  border-radius: 50%;
+}
+
+.s5-inner-caption{
+  color: white;
+  font-family: inherit;
+  font-size: 13px;
+  font-weight: 600;
+  padding-left: 20px;
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.section-6{
+  background-color: white;
+  background-image: url("../images/photo3.jpg");
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: contain;
+
+  color: #3a4d60;
+  font-family: inherit;
+}
+
+.s6-inner{
+  width: 60%;
+  margin-left: 0;
+  margin-right: auto;
+  padding-top: 115px;
+  padding-bottom: 130px;
+}
+
+.s6-inner-header{
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 26px;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+
+.s6-inner-text{
+  font-size: 19px;
+  font-weight: 400;
+  line-height: 31px;
+  margin-bottom: 20px;
+}
+
+.s6-inner-substring{
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 26px;
 }
