--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -29,11 +29,20 @@ $susy: (
 
 body{
   font-family: 'Open Sans', sans-serif;
+  position: relative;
 }
 
 .fixed-panel{
   position: fixed;
+  top:0;
   width: 100%;
+  transition: all 0.3s;
+  height: 100px;
+  z-index: 9999;
+}
+
+.fixed-panel-shrink{
+  background-color: black;
 }
 
 .container-fluid{
@@ -45,15 +54,12 @@ body{
   display: flex;
   flex-direction: row;
   height: 100px;
-
-
 }
 
 .top-logo{
   flex-grow: 1;
   align-self: center;
   text-align: center;
-
 }
 
 .logo-header{
@@ -79,26 +85,27 @@ body{
 
 .navigation-item{
   margin-right: 40px;
-  border-top: 3px solid transparent;
-  border-bottom: 3px solid transparent;
-  padding: 35px 0px;
   float: left;
-
-  &:hover{
-    border-bottom-color: white;
-  }
 
   &:last-child{
     margin-right: 0;
   }
 }
 
-
 .navigation-link{
   text-decoration: none;
   color: inherit;
+  height: 100px;
+  line-height: 100px;
+  display: block;
 
+  &:hover{
+    border-bottom: 3px solid white;
+  }
+}
 
+.navigation-link_current{
+  border-bottom: 3px solid white;
 }
 
 .top-search{
@@ -133,7 +140,6 @@ body{
   font-size: 14px;
 }
 
-
 .navigation{
   color: white;
   font-size: 13px;
@@ -142,12 +148,11 @@ body{
   @include clearfix;
 }
 
-
-
 .header{
   background-image: url("../images/header-bg.jpg");
   background-size: cover;
   height: 100vh;
+  position: relative;
 }
 
 .container{
@@ -155,7 +160,9 @@ body{
 }
 
 .header-intro{
-  padding-top: 200px;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
   @include span(9 of 20);
   text-align: right;
 }
@@ -168,7 +175,14 @@ body{
   margin-bottom: 50px;
 }
 
+.button-area{
+  @include clearfix;
+  width: 40%;
+  margin-left: auto;
+}
+
 .intro-button{
+  float: right;
   background-color: #8824cd;
   border-radius: 30px;
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 0 rgba(0, 0, 0, 0.2);
@@ -178,7 +192,7 @@ body{
   font-weight: 700;
   line-height: 60px;
   border: none;
-  padding: 0 60px;
+  width: 100%;
   margin-bottom: 20px;
 }
 
@@ -188,9 +202,8 @@ body{
   font-size: 12px;
   font-weight: 400;
   line-height: 17px;
-  width: 55%;
-  float: right;
   text-align: center;
+  clear: both;
 }
 
 .section-1{
@@ -281,10 +294,10 @@ body{
 }
 
 .section-3{
-  background: white url("../images/photo1.jpg") no-repeat;
+  //background: white url("../images/photo1.jpg") no-repeat;
+  background: white;
   background-size: contain;
-  padding-bottom: 130px;
-  padding-top: 90px;
+  position: relative;
 }
 
 .s3-inner{
@@ -292,8 +305,26 @@ body{
   font-family: inherit;
   width: 70%;
   margin: 0 auto;
-  margin-right: 1%;
+  margin-right: 0;
+  padding-bottom: 50px;
+  padding-top: 70px;
 }
+
+.inner-img{
+  font-size: 0;
+  height: 100%;
+
+  img{
+    height: 100%;
+  }
+}
+.section-3{
+  .inner-img{
+    float: left;
+    margin-right: 100px;
+  }
+}
+
 
 .s3-inner-header{
   font-size: 15px;
@@ -311,7 +342,7 @@ body{
   margin-bottom: 30px;
 }
 
-.s3inner-text{
+.s3-inner-text{
   font-size: 15px;
   font-weight: 400;
   line-height: 26px;
@@ -431,21 +462,24 @@ body{
 
 .section-6{
   background-color: white;
-  background-image: url("../images/photo3.jpg");
-  background-repeat: no-repeat;
-  background-position: right;
-  background-size: contain;
-
   color: #3a4d60;
   font-family: inherit;
+}
+
+
+.section-6{
+  .inner-img{
+    float: right;
+    margin-left: 100px;
+  }
 }
 
 .s6-inner{
   width: 60%;
   margin-left: 0;
   margin-right: auto;
-  padding-top: 115px;
-  padding-bottom: 130px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .s6-inner-header{
